kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/constraintchecker_tests/invalid/025_weaving_in_kermeta_aspect8/025_weaving_in_kermeta_aspect8_baseClass.kmt
package weavinginvalidtest7;

require kermeta

using kermeta::standard

class A {
	operation amethod() : A[0..*] is abstract
}
